# mmdetection_libtorch

./: CMakeLists.txt  README.md  get_trace_fasterrcnn.py  get_trace_one_stage.py  get_trace_ssd_retinanet.py  get_trace_two_stage.py  single_stage.py  test_detector.cpp  two_stage.py
config/: config_faster_rcnn.json  config_fasterrcnn.json  config_fcos.json  config_maskrcnn.json  config_re.json  config_retinanet.json  config_ssd.json
example/: CMakeLists.txt  test_detector.cpp
include/: Detector.hpp  types.hpp
src/: CMakeLists.txt  Detector.cpp  DetectorCreator.cpp  DetectorImpl.cpp  DetectorImpl.hpp  types.cpp
src/anchor/: AnchorGenerator.cpp  AnchorGenerator.hpp
src/anchor_point/: AnchorPointGenerator.cpp  AnchorPointGenerator.hpp
src/bbox/: CMakeCache.txt  CMakeLists.txt  Makefile  bbox.cpp  bbox.hpp  cmake_install.cmake  nms_cuda.cbp  nms_kernel.cu  nms_kernel.h
src/cuda_helper/: pytorch_cpp_helper.hpp
src/detector/: DetectorCommon.cpp  DetectorCommon.hpp  DetectorFCOS.cpp  DetectorFCOS.hpp  DetectorFasterMaskRcnn.cpp  DetectorFasterMaskRcnn.hpp  DetectorFasterRcnn.cpp  DetectorFasterRcnn.hpp  DetectorRetinanet.cpp  DetectorRetinanet.hpp  DetectorSSD.cpp  DetectorSSD.hpp  SingleStage.cpp  SingleStage.hpp
src/nms/: nms.cpp  nms.hpp  nms_cuda.cu
src/roi_align/: RoIAlign.cpp  RoIAlign.hpp  roi_align_cuda.cu  roi_align_kernel.cu  roi_align_kernel_v2.cu
src/single_roi_extractor/: SingleRoIExtractor.cpp  SingleRoIExtractor.hpp
src/transform/: transforms.cpp  transforms.hpp
src/utils/: jsoncpp.cpp  logging.hpp  timer.hpp
src/utils/json/: json-forwards.h  json.h
